--- a/lab-8/style.css
+++ b/lab-8/style.css
@@ -2,7 +2,7 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: lightblue;
+  background-color: #E1AFD1;
 }
 
 .container {
@@ -37,12 +37,14 @@ form input[type="submit"] {
   width: 100%;
   padding: 10px;
   border: none;
-  background-color: #66a0df;
+  background-color: #9CAFAA;
   color: black;
   cursor: pointer;
   border-radius: 5px;
 }
-
+form input[type="submit"]:hover {
+  background-color: grey;
+}
 .error {
   color: black;
   margin-top: 10px;
