--- a/lab-8/style.css
+++ b/lab-8/style.css
@@ -1,5 +1,6 @@
+@import url('https://fonts.cdnfonts.com/css/noto-sans-bengali');
 body {
-  font-family: Arial, sans-serif;
+  font-family: 'Noto Sans Bengali', sans-serif;
   margin: 0;
   padding: 0;
   background-color: #E1AFD1;
@@ -15,6 +16,7 @@ form {
   background-color: #f9f9f9;
   padding: 20px;
   border-radius: 10px;
+  font-family: 'Noto Sans Bengali', sans-serif;
 }
 
 form label {
@@ -41,6 +43,7 @@ form input[type="submit"] {
   color: black;
   cursor: pointer;
   border-radius: 5px;
+  font-family: 'Noto Sans Bengali', sans-serif;
 }
 form input[type="submit"]:hover {
   background-color: grey;
