--- a/lab-8/style.css
+++ b/lab-8/style.css
@@ -65,7 +65,7 @@ h2 {
   text-align: center;
 }
 .sedan-regular {
-  font-family: "Sedan", serif;
+  font-family: 'Noto Sans Bengali', sans-serif;
   font-weight: 800;
   font-style: normal;
 }
