--- a/final/styles.css
+++ b/final/styles.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.cdnfonts.com/css/nevermind-bauhaus');
+@import url('https://fonts.cdnfonts.com/css/noto-sans-bengali');
 body {
-    font-family: 'NeverMind Bauhaus', sans-serif;
-    background-color: #e7eaf6;
+    font-family: 'Noto Sans Bengali', sans-serif;
+    background-color: #E1AFD1;
     color: #333;  
     padding: 20px;
 }
@@ -12,7 +12,7 @@ body {
     align-items: center;
 }
 h2 {
-    font-family: 'NeverMind Bauhaus', sans-serif;
+    font-family: 'Noto Sans Bengali', sans-serif;
     font-size: 2em;
     color: #333;
 }
@@ -41,7 +41,7 @@ h2 {
 }
 
 .is-off {
-    background-color: #7a42f4;
+    background-color: #9CAFAA;
 }
 
 /* Modal Styles */
@@ -67,7 +67,7 @@ h2 {
     max-width: 400px;
     border-radius: 15px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-    font-family: 'NeverMind Bauhaus', sans-serif;
+    font-family: 'Noto Sans Bengali', sans-serif;
 }
 
 .close {
